<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@color/colorPrimary"
    tools:context=".MainActivity">

    <it.beppi.knoblibrary.Knob
        android:id="@+id/PitchKnob"
        android:layout_width="183dp"
        android:layout_height="171dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:rotation="180"
        app:kAnimation="false"
        app:kAnimationBounciness="15"
        app:kClickBehaviour="nothing"
        app:kDefaultState="13"
        app:kFreeRotation="false"
        app:kKnobCenterRelativeRadius="0.6"
        app:kKnobColor="@color/knob_color"
        app:kMaxAngle="360"
        app:kMinAngle="0"
        app:kNumberOfStates="26"
        app:kSelectedStateMarkerColor="@color/knob_marker"
        app:kStateMarkersWidth="2sp"
        app:kSwipe="vertical_horizontal"
        app:layout_constraintBottom_toTopOf="@+id/TempoKnob"
        app:layout_constraintEnd_toStartOf="@+id/PitchED"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <it.beppi.knoblibrary.Knob
        android:id="@+id/TempoKnob"
        android:layout_width="183dp"
        android:layout_height="171dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:rotation="180"
        app:kAnimation="false"
        app:kAnimationBounciness="55"
        app:kClickBehaviour="nothing"
        app:kDefaultState="11"
        app:kFreeRotation="false"
        app:kKnobCenterRelativeRadius="0.6"
        app:kKnobColor="@color/knob_color"
        app:kMaxAngle="360"
        app:kMinAngle="0"
        app:kNumberOfStates="22"
        app:kSelectedStateMarkerColor="@color/knob_marker"
        app:kStateMarkersWidth="2sp"
        app:kSwipe="vertical_horizontal"
        app:layout_constraintBottom_toTopOf="@+id/songNameTV"
        app:layout_constraintEnd_toStartOf="@+id/TempoED"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PitchKnob" />

    <EditText
        android:id="@+id/PitchED"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:imeOptions="actionDone"
        android:inputType="numberDecimal"
        android:text="@string/def_zero"
        app:layout_constraintBottom_toBottomOf="@+id/PitchKnob"
        app:layout_constraintStart_toEndOf="@+id/PitchKnob"
        app:layout_constraintTop_toTopOf="@+id/PitchKnob" />

    <EditText
        android:id="@+id/TempoED"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:imeOptions="actionDone"
        android:inputType="numberDecimal"
        android:text="@string/def_zero"
        app:layout_constraintBottom_toBottomOf="@+id/TempoKnob"
        app:layout_constraintStart_toEndOf="@+id/TempoKnob"
        app:layout_constraintTop_toTopOf="@+id/TempoKnob" />

    <android.support.design.button.MaterialButton
        android:id="@+id/butPlayPause"
        style="@style/Material.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:onClick="PlayPauseClick"
        android:text="@string/play"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <android.support.design.button.MaterialButton
        android:id="@+id/butSetSong"
        style="@style/Material.Button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="8dp"
        android:onClick="SetSongClick"
        android:text="@string/set_song"
        android:textSize="13sp"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toTopOf="@+id/butEQ"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/PitchED"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.design.button.MaterialButton
        android:id="@+id/butEQ"
        style="@style/Material.Button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="6dp"
        android:layout_marginBottom="8dp"
        android:onClick="EQClick"
        android:text="@string/equaliser"
        android:textSize="13sp"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toTopOf="@+id/butRec"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/PitchED"
        app:layout_constraintTop_toBottomOf="@+id/butSetSong" />

    <android.support.design.button.MaterialButton
        android:id="@+id/butRec"
        style="@style/Material.Button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="8dp"
        android:onClick="RecordClick"
        android:text="@string/record"
        android:textSize="13sp"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toTopOf="@+id/butVocal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/PitchED"
        app:layout_constraintTop_toBottomOf="@+id/butEQ" />

    <android.support.design.button.MaterialButton
        android:id="@+id/butVocal"
        style="@style/Material.Button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="8dp"
        android:onClick="RemoveVocalClick"
        android:text="@string/remove_vocal"
        android:textSize="14sp"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toTopOf="@+id/seekBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/PitchED"
        app:layout_constraintTop_toBottomOf="@+id/butRec" />

    <SeekBar
        android:id="@+id/seekBar"
        style="@style/Widget.AppCompat.SeekBar"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:progressTint="@color/colorLightAccent"
        android:thumbTint="@color/colorAccent"
        app:layout_constraintBottom_toTopOf="@+id/butPlayPause"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/TimeTextBox"
        android:layout_width="141dp"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/def_length"
        android:textAlignment="textEnd"
        android:textColor="@color/dark_gray"
        app:layout_constraintBottom_toTopOf="@+id/seekBar"
        app:layout_constraintEnd_toEndOf="parent" />

    <android.support.design.button.MaterialButton
        android:id="@+id/butForward"
        style="@style/Material.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:onClick="ForwardClick"
        android:text="@string/forward"
        android:textStyle="bold"
        app:autoSizeMaxTextSize="100sp"
        app:autoSizeMinTextSize="12sp"
        app:autoSizeStepGranularity="2sp"
        app:autoSizeTextType="uniform"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/butPlayPause" />

    <android.support.design.button.MaterialButton
        android:id="@+id/butBackward"
        style="@style/Material.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:onClick="BackwardClick"
        android:text="@string/backward"
        android:textAllCaps="true"
        android:textStyle="bold"
        app:autoSizeMaxTextSize="100sp"
        app:autoSizeMinTextSize="12sp"
        app:autoSizeStepGranularity="2sp"
        app:autoSizeTextType="uniform"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/butPlayPause" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/pitch"
        android:textColor="@color/color_text"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/PitchKnob"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/tempo"
        android:textColor="@color/color_text"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/TempoKnob"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PitchKnob" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/semitones"
        android:textColor="@color/dark_gray"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/PitchED"
        app:layout_constraintStart_toStartOf="@+id/PitchED"
        app:layout_constraintTop_toBottomOf="@+id/PitchED" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/percent"
        android:textColor="@color/dark_gray"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/TempoED"
        app:layout_constraintStart_toStartOf="@+id/TempoED"
        app:layout_constraintTop_toBottomOf="@+id/TempoED" />

    <TextView
        android:id="@+id/songNameTV"
        android:layout_width="0dp"
        android:layout_height="22dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/choose_a_song"
        android:textColor="@color/dark_gray"
        app:layout_constraintBottom_toTopOf="@+id/seekBar"
        app:layout_constraintEnd_toStartOf="@+id/TimeTextBox"
        app:layout_constraintStart_toStartOf="parent" />


</android.support.constraint.ConstraintLayout>